--- a/02-array-seq/array-seq.ipynb
+++ b/02-array-seq/array-seq.ipynb
@@ -172,6 +172,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12.3, 12.4, 12.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"12.3\",\"12.4\",\"12.5\"]\n",
+    "res = map(float,a)\n",
+    "print(list(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = list(filter(lambda i: i%2==0, [1,2,3,4,5,6]))\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -224,6 +261,26 @@
     "sizes = ['S', 'M', 'L']\n",
     "tshirts = [(color, size) for color in colors for size in sizes]\n",
     "tshirts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2]\n",
+    "b = [3,4]\n",
+    "res = [(i,j) for i in a for j in b]\n",
+    "print(res)"
    ]
   },
   {
@@ -532,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +886,7 @@
        "[['_', '_', '_'], ['_', '_', '_'], ['_', '_', '_']]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +907,7 @@
        "[['_', '_', 'O'], ['_', '_', 'O'], ['_', '_', 'O']]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2230,7 +2287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
